<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.digitalhouse.moviematch.cadastro.CadastroUsuarioActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#585280"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="540dp"
            android:layout_height="112dp"
            android:background="#263445"
            android:minHeight="110dp"
            android:paddingStart="2dp"
            android:paddingEnd="25dp"
            android:theme="?attr/actionBarTheme"
            app:maxButtonHeight="56dp"
            app:navigationIcon="@mipmap/filme"
            app:title="@string/cadastro_do_usuario"
            app:titleMargin="40dp"
            app:titleMarginStart="40dp"
            app:titleTextColor="#F7FF00" />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:background="#976DD0"
            android:hint="@string/nome"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="#ffffff" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#976DD0"
            android:hint="@string/idade"
            android:inputType="number"
            android:padding="20dp"
            android:textColorHint="#ffffff" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#976DD0"
            android:hint="@string/sexo"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="#ffffff" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#976DD0"
            android:hint="@string/cidade"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="#ffffff" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="120dp"
                android:background="#F7FF00"
                android:text="@string/finalizar"
                android:textColor="#585280" />

        </RelativeLayout>


    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/avatar"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>